# cppeddit

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Cppeddit.cpp  Cppeddit.h  README.md
lib/: cpr.lib  libcurl-d_imp.lib  zlib.lib
lib/pkgconfig/: libcurl.pc  zlib.pc
src/: globals.h
src/authorization/: baseauthoriser.cpp  baseauthoriser.h  credidentials.cpp  credidentials.h  scriptauthoriser.cpp  scriptauthoriser.h  token.cpp  token.h
src/client/: client.cpp  client.h
src/client/rest/: restclient.cpp  restclient.h
src/dto/: subreddit.h
src/reddit/: deserialiser.cpp  deserialiser.h  implementations.h  interfaces.cpp  interfaces.h
src/requests/: baserequester.cpp  baserequester.h  subreddit.cpp  subreddit.h
src/requests/requestblocks/: listingblock.h
